[gd_scene load_steps=28 format=3 uid="uid://cu7k8rlxxbi5p"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_mjmp6"]
[ext_resource type="Texture2D" uid="uid://b3cgyogwy8ma0" path="res://art/gui/main_menu/background.png" id="2_ttmus"]
[ext_resource type="Texture2D" uid="uid://ihsyctsd85cm" path="res://art/gui/main_menu/button_normal.png" id="3_fl7uf"]
[ext_resource type="Texture2D" uid="uid://bkpylh0hxplx7" path="res://art/gui/main_menu/button_hovel.png" id="4_vpd1d"]
[ext_resource type="Texture2D" uid="uid://dy6jyfcql2g8v" path="res://art/gui/main_menu/button_pressed.png" id="5_41p28"]
[ext_resource type="Texture2D" uid="uid://ddwm74xju6ek1" path="res://art/gui/main_menu/button_disambled.png" id="6_mtvwa"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_eif4w"]
texture = ExtResource("2_ttmus")
region_rect = Rect2(0, 0, 281, 648)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_265ax"]
texture = ExtResource("3_fl7uf")
region_rect = Rect2(0, 0, 281, 31)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n1y2j"]
texture = ExtResource("4_vpd1d")
region_rect = Rect2(0, 0, 281, 31)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_s5vyy"]
texture = ExtResource("5_41p28")
region_rect = Rect2(0, 0, 281, 31)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wb6df"]
texture = ExtResource("6_mtvwa")
region_rect = Rect2(0, 0, 281, 31)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a6x7l"]
texture = ExtResource("5_41p28")
region_rect = Rect2(0, 0, 281, 31)
modulate_color = Color(0.698039, 0.384314, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nhyiw"]
texture = ExtResource("3_fl7uf")
region_rect = Rect2(0, 0, 281, 31)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_glcmc"]
texture = ExtResource("4_vpd1d")
region_rect = Rect2(0, 0, 281, 31)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pnb1b"]
texture = ExtResource("5_41p28")
region_rect = Rect2(0, 0, 281, 31)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xxe10"]
texture = ExtResource("6_mtvwa")
region_rect = Rect2(0, 0, 281, 31)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bfwxj"]
texture = ExtResource("5_41p28")
region_rect = Rect2(0, 0, 281, 31)
modulate_color = Color(0.698039, 0.384314, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ggmps"]
texture = ExtResource("3_fl7uf")
region_rect = Rect2(0, 0, 281, 31)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xfdul"]
texture = ExtResource("4_vpd1d")
region_rect = Rect2(0, 0, 281, 31)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jhsdy"]
texture = ExtResource("5_41p28")
region_rect = Rect2(0, 0, 281, 31)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_avhjp"]
texture = ExtResource("6_mtvwa")
region_rect = Rect2(0, 0, 281, 31)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_46ttu"]
texture = ExtResource("5_41p28")
region_rect = Rect2(0, 0, 281, 31)
modulate_color = Color(0.698039, 0.384314, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r5kuj"]
texture = ExtResource("3_fl7uf")
region_rect = Rect2(0, 0, 281, 31)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fq110"]
texture = ExtResource("4_vpd1d")
region_rect = Rect2(0, 0, 281, 31)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iycmy"]
texture = ExtResource("5_41p28")
region_rect = Rect2(0, 0, 281, 31)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a0ghg"]
texture = ExtResource("6_mtvwa")
region_rect = Rect2(0, 0, 281, 31)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ufdco"]
texture = ExtResource("5_41p28")
region_rect = Rect2(0, 0, 281, 31)
modulate_color = Color(0.698039, 0.384314, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mjmp6")

[node name="MenuPanel" type="Panel" parent="."]
anchors_preset = -1
anchor_left = 0.366667
anchor_right = 0.611458
anchor_bottom = 1.0
offset_left = -2.40039
offset_right = -3.3996
pivot_offset = Vector2(141, 324)
theme_override_styles/panel = SubResource("StyleBoxTexture_eif4w")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(141, 324)
metadata/_edit_use_anchors_ = true

[node name="Control" type="Control" parent="MenuPanel/VBoxContainer"]
layout_mode = 3
anchors_preset = 0
offset_right = 281.0
offset_bottom = 253.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="MenuPanel/VBoxContainer"]
offset_top = 257.0
offset_right = 281.0
offset_bottom = 283.0
text = "1842"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Button" type="Button" parent="MenuPanel/VBoxContainer"]
offset_top = 287.0
offset_right = 281.0
offset_bottom = 310.0
theme_override_styles/normal = SubResource("StyleBoxTexture_265ax")
theme_override_styles/hover = SubResource("StyleBoxTexture_n1y2j")
theme_override_styles/pressed = SubResource("StyleBoxTexture_s5vyy")
theme_override_styles/disabled = SubResource("StyleBoxTexture_wb6df")
theme_override_styles/focus = SubResource("StyleBoxTexture_a6x7l")
text = "Start New Game"

[node name="Button_2" type="Button" parent="MenuPanel/VBoxContainer"]
offset_top = 314.0
offset_right = 281.0
offset_bottom = 337.0
theme_override_styles/normal = SubResource("StyleBoxTexture_nhyiw")
theme_override_styles/hover = SubResource("StyleBoxTexture_glcmc")
theme_override_styles/pressed = SubResource("StyleBoxTexture_pnb1b")
theme_override_styles/disabled = SubResource("StyleBoxTexture_xxe10")
theme_override_styles/focus = SubResource("StyleBoxTexture_bfwxj")
text = "Configuaration"

[node name="Button_3" type="Button" parent="MenuPanel/VBoxContainer"]
offset_top = 341.0
offset_right = 281.0
offset_bottom = 364.0
theme_override_styles/normal = SubResource("StyleBoxTexture_ggmps")
theme_override_styles/hover = SubResource("StyleBoxTexture_xfdul")
theme_override_styles/pressed = SubResource("StyleBoxTexture_jhsdy")
theme_override_styles/disabled = SubResource("StyleBoxTexture_avhjp")
theme_override_styles/focus = SubResource("StyleBoxTexture_46ttu")
text = "Map Editor(Dev test)"

[node name="Button_4" type="Button" parent="MenuPanel/VBoxContainer"]
offset_top = 368.0
offset_right = 281.0
offset_bottom = 391.0
theme_override_styles/normal = SubResource("StyleBoxTexture_r5kuj")
theme_override_styles/hover = SubResource("StyleBoxTexture_fq110")
theme_override_styles/pressed = SubResource("StyleBoxTexture_iycmy")
theme_override_styles/disabled = SubResource("StyleBoxTexture_a0ghg")
theme_override_styles/focus = SubResource("StyleBoxTexture_ufdco")
text = "Quit Game"

[node name="Control_2" type="Control" parent="MenuPanel/VBoxContainer"]
layout_mode = 3
anchors_preset = 0
offset_top = 395.0
offset_right = 281.0
offset_bottom = 648.0
size_flags_vertical = 3

[connection signal="pressed" from="MenuPanel/VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MenuPanel/VBoxContainer/Button_2" to="." method="_on_configuration_pressed"]
[connection signal="pressed" from="MenuPanel/VBoxContainer/Button_3" to="." method="_on_map_editor_pressed"]
[connection signal="pressed" from="MenuPanel/VBoxContainer/Button_4" to="." method="_on_quit_pressed"]
